# pymatsolver

./: .buildinfo  .bumpversion.cfg  .coveragerc  .gitignore  .travis.yml  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  api.html  credentials.tar.gz.enc  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  requirements_docs.txt  search.html  searchindex.js  setup.py
.github/workflows/: python-package-conda.yml
docs/: Makefile  api.rst  conf.py  index.rst
docs/_templates/autosummary/: class.rst
pyMKL/: __init__.py  loadMKL.py  pardisoInterface.py  pardisoSolver.py
pyMKL/Tests/: test_Pardiso.py
pymatsolver/: Base.py  Solver.py  __init__.py  direct.py  iterative.py  solvers.py  wrappers.py
pymatsolver/BicgJacobi/: __init__.py
pymatsolver/Mumps/: Makefile  Makefile.seogi  __init__.py  mumps_cmplx_mod.mod  mumps_interface.f90  mumps_mod.mod  test.f90
pymatsolver/Mumps/MumpsInterface.so.dSYM/Contents/: Info.plist
pymatsolver/Pardiso/: __init__.py
pymatsolver/Pardiso/pyMKL/: LICENSE  README.md  pardisoInterface.py  pardisoSolver.py
pymatsolver/Pardiso/pyMKL/Tests/: test_Pardiso.py
pymatsolver/Tests/: test_Basic.py  test_BicgJacobi.py  test_Mumps.py  test_Pardiso.py  test_Triangle.py
pymatsolver/Tests/fdem/: RHS.npy
pymatsolver/Triangle/: Makefile  TriangleFortran.py  TrianglePython.py
pymatsolver/Triangle/TriSolve.so.dSYM/Contents/: Info.plist
pymatsolver/direct/: __init__.py  mumps.py  pardiso.py
pymatsolver/mumps/: Makefile  __init__.py  _init_.py  mumps_cmplx_p.f90  mumps_interface.f90  mumps_p.f90
tests/: __init__.py  test_Basic.py  test_BicgJacobi.py  test_Mumps.py  test_Pardiso.py  test_Scipy.py  test_Triangle.py  test_Wrappers.py  test_conjugate.py  test_uninstalled.py
tests/fdem/: A_data.npy  A_indices.npy  A_indptr.npy
